# django-template

./: .editorconfig  .gitignore  .pre-commit-config.yaml  DockerFile  README.md  manage.py  pyproject.toml  requirements.txt
.github/: deploy_example.yml
.github/workflows/: deploy_prod.yml
common/: admin.py  managers.py  middlewares.py  models.py  schemas.py
config/: adapters.py  api.py  celery.py  urls.py
config/settings/: base.py  local.py  production.py
docker-compose/: dev-celery.yml  dev.yml  prod_image_tst.yml  rel.yml  test.yml
docker-entrypoint/: celery-entrypoint.sh  django-entrypoint.sh  flower-entrypoint.sh
dotenv/: .env.example
features/bot/: admin.py  apis.py  apps.py  models.py  serializers.py
features/bot/migrations/: 0001_initial.py
features/core/: admin.py  apps.py  forms.py  managers.py  models.py
features/core/migrations/: 0001_initial.py
utils/: controller.py  encrypt.py  image.py  logging.py  storage.py  test.py
